@@ -1,3 +1,10 @@
+2008-07-31  Alexey Proskuryakov  <ap@webkit.org>
+
+        Release build fix.
+
+        * Plugins/WebBaseNetscapePluginView.mm: (-[WebBaseNetscapePluginView setWindowIfNecessary]):
+        Don't define to npErr in release builds, as it is only used for logging.
+
 2008-07-31  John Sullivan  <sullivan@apple.com>
 
         Fixed <https://bugs.webkit.org/show_bug.cgi?id=5195>
